# fontcluster

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CLAUDELOG.md  README.md  claudeLog.md  eslint.config.js  package.json  pnpm-lock.yaml  settings.local.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  ui.config.json  vite.config.ts  vite.web.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release-trigger.yml  release.yml
CLAUDELOGS/: CLAUDELOG-250704-03.md  CLAUDELOG-250704-04.md  CLAUDELOG-250704-05.md  CLAUDELOG-250704-06.md  CLAUDELOG-250704-13.md  CLAUDELOG-250704-17.md  CLAUDELOG-250706-01.md  CLAUDELOG-250706-07.md  CLAUDELOG-250706-21.md  CLAUDELOG-250709-20.md  CLAUDELOG-250709-21.md  CLAUDELOG-250709-23.md  CLAUDELOG-250710-02.md  CLAUDELOG-250710-04.md  CLAUDELOG-250710-06.md  CLAUDELOG-250710-07.md  CLAUDELOG-250711-04.md  CLAUDELOG-250711-06.md  CLAUDELOG-250712-19.md  CLAUDELOG-250712-20.md  CLAUDELOG-250713-01.md  CLAUDELOG-250713-03.md  CLAUDELOG-250713-04.md  CLAUDELOG-250713-06.md  CLAUDELOG250704.md
figma-plugin/: README.md  code.ts  manifest.json  tsconfig.json  ui.html
src/: App.tsx  actions.ts  env.d.ts  index.css  index.tsx  selection-history.ts  store.ts  theme.ts
src-plugin-figma/: manifest.json  tsconfig.json
src-tauri/: Cargo.toml  build.rs  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_8.txt  check_output_9.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md  dinov3-vits16-pretrain-lvd1689m.onnx
src-tauri/models/mobilenet-v4-medium/: attribute_directions.json
src-tauri/models/repvit_m1.dist_in1k/: meta.json  preprocess.json  repvit_preference_projector.json
src-tauri/models/student_repvit_m1_0_v4/: attribute_directions.json
src-tauri/resources/: google_fonts.json  google_fonts_popularity.json
src-tauri/resources/example/: 019e6e85-cd58-7c32-ae7c-e93761b309f1.fontclusterdoc  019e73ef-698a-70c1-a251-2693deaae02e.fontclusterdoc  019f894e-9640-7ed0-92f5-59637222b192.fontclusterdoc
src-tauri/src/: google_fonts.rs  lib.rs  main.rs
src-tauri/src/commands/: figma.rs  font.rs  font_commands.rs  job_commands.rs  jobs.rs  lasso.rs  mod.rs  model.rs  plugin.rs  progress.rs  progress_commands.rs  session.rs  session_commands.rs  skia_commands.rs  vector_commands.rs
src-tauri/src/config/: constants.rs  font_config.rs  mod.rs  session_config.rs
src-tauri/src/core/: analyzer.rs  burn_model.rs  clusterer.rs  compressor.rs  discoverer.rs  events.rs  example.rs  factor_rotation.rs  figma_bridge.rs  font_classifier.rs  font_service.rs  google_fonts.rs  google_fonts_downloader.rs  image_generator.rs  inference.rs  mapper.rs  mod.rs  models.rs  optimal_leaf_ordering.rs  plugin_bridge.rs  positioner.rs  sample_renderer.rs  session.rs  skia_image_generator.rs  vectorizer.rs
src-tauri/src/error/: mod.rs
src-tauri/src/rendering/: font_renderer.rs  mod.rs  skia_renderer.rs
src-tauri/src/resources/: resnet50.onnx
src-tauri/src/utils/: event_utils.rs  mod.rs  pipeline.rs  result_utils.rs
src/actions/: graph.ts
src/components/: app-shell-panel.tsx  button.tsx  chat-view-panel.tsx  clipboard-listener.tsx  clipboard-manager.tsx  cluster-selector.tsx  cluster-visualizer.tsx  control-property-section.tsx  control-property.tsx  font-cluster-visualization.tsx  font-compressed-vector-list.tsx  font-config-list.tsx  font-graph-view-panel.tsx  font-lists.tsx  font-metadata-list.tsx  font-processing-form.tsx  font-vector-point.tsx  graph-toolbar.tsx  horizontal-scroller.tsx  image-visibility-control.tsx  language-toggle.tsx  list-view-panel.tsx  mode-toggle.tsx  search-form.tsx  session-item.tsx  session-picker-dialog.tsx  session-selector.tsx  theme-mode-toggle.tsx  theme-toggle.tsx  titlebar.tsx  weight-selector.tsx  zoom-controls.tsx
src/components/chat/: content.tsx  index.ts  panel.tsx
src/components/control/: content.tsx  emphasis-controls.tsx  generate-button.tsx  index.ts  job-history.tsx  job-monitor.tsx  model-property.tsx  number-property.tsx  panel.tsx  property-section.tsx  property.tsx  switch-property.tsx  text-property.tsx
src/components/graph/: bottom-controls.tsx  bottom-toolbar.tsx  cartesian-image-visibility.ts  constants.ts  content.tsx  dendrogram-dock.tsx  dendrogram-edges.ts  dendrogram-layout.ts  dendrogram-topology.ts  filter-dock.tsx  font-point-index.ts  graph-viewer.tsx  image-visibility-toggle.tsx  index.ts  job-history.tsx  lasso-clear-button.tsx  lib.ts  panel-reopen-controls.tsx  panel.tsx  point.tsx  radial-image-visibility.ts  search-field.tsx  selected-font-actions.tsx  selected-font-info.tsx  session-history-item.tsx  session-history.tsx  toolbar.tsx  treemap-layout.ts  types.ts  use-graph-points.ts  use-graph-selection.ts  use-graph-viewport.ts  utility-controls.tsx  viewbox.ts  zoom-controls.tsx
src/components/list/: content.tsx  font-item.tsx  font-sample-image.tsx  index.ts  item.tsx  list-font-item.tsx  panel.tsx  plugin-connections-menu.tsx  preview-text-field.tsx  virtualized-items.tsx
src/components/ui/: accordion.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  (+14 more)
src/constants/: emphasis.ts  session.ts
src/hooks/: use-app-signal.ts  use-app-state.ts  use-dismiss.ts  use-element-size.ts  use-event-listeners.ts  use-filtered-font-metadata-array.ts  use-filtered-font-metadata-keys.ts  use-is-fullscreen.ts
src/i18n/: en.ts  index.ts  index.tsx  ja.ts
src/lib/: cluster-colors-pixi.ts  cluster-colors.ts  figma-bridge.ts  font-source-resolver.ts  font-svg-clipboard.ts  graph-modes.ts  hog.ts  models.ts  plugin-bridge.ts  text-measurer.ts  updater.ts  utils.ts  visualizer-points.ts
src/types/: d3-voronoi-treemap.d.ts  font.ts  graph.ts  model.ts  panels.ts  plugin.ts  session.ts  troika-three-text.d.ts
src/web/: app.tsx  index.tsx  load-fontcluster-document.ts  utility-controls.tsx
web/: README.md  index.html
(+45 files in other folders)
