[package]
name = "FontCluster"
version = "0.2.4"
description = "A font clustering and visualization tool powered by Tauri."
authors = ["mugisus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fontcluster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

# Optimize dependencies even in debug mode
[profile.dev.package]
"ndarray" = { opt-level = 2 }
"nalgebra" = { opt-level = 2 }
"image" = { opt-level = 2 }
"imageproc" = { opt-level = 2 }
"linfa" = { opt-level = 2 }
"linfa-clustering" = { opt-level = 2 }
"pacmap" = { opt-level = 2 }
"hdbscan" = { opt-level = 2 }
"mimalloc" = { opt-level = 3 }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Force linfa-compatible ndarray version for clustering only
ndarray_015 = { package = "ndarray", version = "0.15" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-kit = "0.14"
pathfinder_geometry = "0.5"
image = "0.25"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
thiserror = "1.0"
imageproc = "0.24"
ndarray = "0.16"
# PCA implementation without LAPACK dependency
nalgebra = "0.33"
# PaCMAP for dimensionality reduction
pacmap = "0.2"
# Random number generation for K-means
rand = "0.8"
# HDBSCAN clustering algorithm
hdbscan = "0.9"
# Linfa clustering algorithms including Gaussian Mixture
# Note: linfa 0.7 normally uses ndarray 0.15, but we try to unify or manage duplicates
linfa = { version = "0.7", default-features = false }
linfa-clustering = { version = "0.7.1", default-features = false }
# UUIDv7 for session management
uuid = { version = "1.0", features = ["v7", "serde"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
bytemuck = "1.23.2"
ttf-parser = "0.25.1"
memmap2 = "0.9"
rayon = "1.10"
jwalk = "0.8"
mimalloc = "0.1"

# [target.'cfg(target_os = "windows")'.dependencies]
# intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"] }
