[package]
name = "FontCluster"
version = "0.17.1"
description = "A font clustering and visualization tool powered by Tauri."
authors = ["mugisus"]
edition = "2021"

[package.metadata.release]
publish = false
tag-name = "v{{version}}"
tag-message = "{{date}} FontCluster v{{version}}"
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  { file = "../package.json", search = '^  "version": ".*",$', replace = '  "version": "{{version}}",', exactly = 1 },
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fontcluster_lib"
crate-type = ["cdylib", "rlib"]

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23"
google-fonts-subsets = "0.202602.1"
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "6"
tokio = { version = "1", features = ["rt"] }
thiserror = "2"
ndarray = { version = "0.17" }
ort = { version = "2.0.0-rc.12", features = ["ndarray", "coreml"] }
# Dimensionality reduction and clustering
kodama = "0.3"
# UUIDv7 for session management
uuid = { version = "1.0", features = ["v7", "serde"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
bytemuck = "1.23.2"
# dispatch2 0.3.1 fails to compile with bitflags 2.12.0 on macOS.
bitflags = "=2.11.1"
rayon = "1.10"
swash = "0.2"
mimalloc = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
regex = "1.12.2"
urlencoding = "2.1.3"
wuff = "0.2.3"
zip = { version = "8", default-features = false, features = ["deflate"] }
tempfile = "3"
ritecache = "0.1.0"
semver = "1"
walkdir = "2"

[target.'cfg(target_os = "linux")'.dependencies]
openblas-src = { version = "0.10.16", default-features = false, features = ["cblas", "rustls", "system"] }
petal-decomposition = { version = "0.9", features = ["openblas-system"] }

[target.'cfg(target_os = "macos")'.dependencies]
petal-decomposition = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
petal-decomposition = { version = "0.9", features = ["intel-mkl-static"] }
